# loopy-comfy

./: .coverage  .gitignore  CHANGELOG.md  COMFYUI_INSTALLATION.md  CONTRIBUTING.md  DEPLOYMENT_INFO.json  LICENSE  OPENCV_FIX_NOTES.md  PRODUCTION_READY.md  README.md  TASKS.md  __init__.py  __init___BACKUP.py  api_extensions.py  debug_comfyui.py  diagnose_comfyui_error.py  diagnostic_output.txt  diagnostic_report.json  fix_comfyui_dependencies.bat  fix_comfyui_dependencies.py  install_dependencies.py  pyproject.toml  requirements-dev.txt  requirements.txt  server_extensions.py  test_ui_compatibility.py  test_ui_enhancements.py
.claude-flow/metrics/: performance.json  task-metrics.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.swarm/: memory.db
advanced/: gpu_processor.py  ml_transition.py  parallel_processor.py  real_time_processor.py  websocket_server.py
config/: advanced_features.yaml
core/: __init__.py  markov_engine.py
core/v2/: __init__.py  config_manager.py  fallback_system.py  resource_monitor.py
docs/: CRITICAL_FIXES_PRD.md  INSTALLATION_TROUBLESHOOTING.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PLANING.md  PRESENTATION.md  PRP.md  v2-advanced-features.md  v2-quick-start.md
nodes/: __init__.py  markov_sequencer.py  video_asset_loader.py  video_composer.py  video_saver.py
tests/: __init__.py  conftest.py  pytest.ini  test_comfyui_integration.py  test_edge_cases.py  test_integration.py  test_markov_engine.py  test_markov_sequencer.py  test_video_asset_loader.py  test_video_composer.py  test_video_saver.py
tests/.claude-flow/metrics/: performance.json  task-metrics.json
tests/.swarm/: memory.db
tests/security/: test_security_validation.py  test_websocket_security.py
tests/v2/: __init__.py  conftest.py  test_advanced_features.py
utils/: __init__.py  async_processing.py  memory_manager.py  optimized_video_processing.py  performance_optimizations.py  security_utils.py  video_utils.py
web/: nonlinear_avatar_ui.js  style.css
web/v2/: performance_dashboard.js  real_time_preview.js
workflows/: README.md  advanced_avatar_workflow.json  basic_avatar_workflow.json  ui_enhanced_workflow.json
